--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -31,24 +31,34 @@ jobs:
           Get-BDS -OS linux -Version ${{ env.bds_version }}
       - name: Generate database
         run: |
-          symutils build-database database.db win\bedrock_server.pdb linux\bedrock_server
+          symutils build-database bedrock_server.bds-dump win\bedrock_server.pdb linux\bedrock_server
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: database
-          path: database.db
+          name: dump
+          path: bedrock_server.bds-dump
       - name: Get timestamp
         id: get-tag
         run: |
           $timestamp = Get-Date -AsUTC -Format o | ForEach-Object { $_ -replace ":", "." }
           echo "::set-output name=tag::${{ env.bds_version }}-$timestamp"
-      - name: Tag snapshot
-        uses: tvdias/github-tagger@v0.0.1
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.get-tag.outputs.tag }}
-      - uses: meeDamian/github-release@2.0
+          tag_name: ${{ steps.get-tag.outputs.tag }}
+          release_name: Release ${{ env.bds_version }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: ${{ steps.get-tag.outputs.tag }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          files: database.db
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: bedrock_server.bds-dump
+          asset_name: bedrock_server.bds-dump
+          asset_content_type: application/x-sqlite3
