--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -61,4 +61,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: bedrock_server.bds-dump
           asset_name: bedrock_server.bds-dump
-          asset_content_type: application/x-sqlite3
+          asset_content_type: application/vnd.sqlite3
