--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -50,10 +50,9 @@ jobs:
         with:
           tag_name: ${{ steps.get-tag.outputs.tag }}
           release_name: Release ${{ env.bds_version }}
-          draft: false
+          draft: true
           prerelease: false
       - name: Upload Release Asset
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -63,7 +62,6 @@ jobs:
           asset_name: bedrock_server.bds-dump
           asset_content_type: application/vnd.sqlite3
       - name: Upload SymbolTokenizer.dll
-        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
