--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -68,5 +68,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ runner.tool_cache }}/bdsd/SymbolTokenizer.dll
-          asset_name: tokenizer.dll
+          asset_name: SymbolTokenizer.dll
           asset_content_type: application/octet-stream
